Fix isEmpty AssemblyHelpers function and add isNotEmpty https://bugs.webkit.org/show_bug.cgi?id=209507

Reviewed by Saam Barati.

This fixes the 32 version of my HasIndexedProperty patch as well
as properly names the functions for what they do.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileHasIndexedProperty):
* jit/AssemblyHelpers.h:
(JSC::AssemblyHelpers::isEmpty):
(JSC::AssemblyHelpers::isNotEmpty):


Canonical link: https://commits.webkit.org/222439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258952 268f45cc-cd09-0410-ab3c-d52691b4dbfc